--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@
 
             <!-- Publications -->
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
-                <h2 id="teaching">Teaching</h2>
+                <h2 id="teaching">Econ 133: Global Inequality and Growth</h2>
             <p>
                     <h5>
 			    Ahoy! I'll be populating this space with materials for Econ 133: Global Inequality and Growth for the spring 2022 semester. See you there!
@@ -57,9 +57,16 @@
 			    <dd><a href="https://gabriel-zucman.eu/econ133/">Professor Gabriel Zucman's Econ 133 site</a></dd>
 		    </h6>	   
 	    </p>	    
-		<blockquote class="twitter-tweet"><p lang="es" dir="ltr">Me sumo a la recomendación! Llevo varios capítulos, entre ellos los de <a href="https://twitter.com/lambeth_george?ref_src=twsrc%5Etfw">@lambeth_george</a>, <a href="https://twitter.com/dvergarad?ref_src=twsrc%5Etfw">@dvergarad</a>, <a href="https://twitter.com/fjmenese?ref_src=twsrc%5Etfw">@fjmenese</a>, <a href="https://twitter.com/valentiandrade?ref_src=twsrc%5Etfw">@valentiandrade</a>, y todos muy interesantes! Gran labor de <a href="https://twitter.com/cristobalotero?ref_src=twsrc%5Etfw">@cristobalotero</a> y Atria! <a href="https://t.co/VAtZTunlqC">https://t.co/VAtZTunlqC</a></p>&mdash; Felipe Vial (he/él) (@pipevial) <a href="https://twitter.com/pipevial/status/1475598561438011395?ref_src=twsrc%5Etfw">December 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	
+		
+	    
+	    <h2 id="teaching">Econ 133 weekly discussion posts</h2>
+	   <!--
+		
+ 		<blockquote class="twitter-tweet"><p lang="es" dir="ltr">Me sumo a la recomendación! Llevo varios capítulos, entre ellos los de <a href="https://twitter.com/lambeth_george?ref_src=twsrc%5Etfw">@lambeth_george</a>, <a href="https://twitter.com/dvergarad?ref_src=twsrc%5Etfw">@dvergarad</a>, <a href="https://twitter.com/fjmenese?ref_src=twsrc%5Etfw">@fjmenese</a>, <a href="https://twitter.com/valentiandrade?ref_src=twsrc%5Etfw">@valentiandrade</a>, y todos muy interesantes! Gran labor de <a href="https://twitter.com/cristobalotero?ref_src=twsrc%5Etfw">@cristobalotero</a> y Atria! <a href="https://t.co/VAtZTunlqC">https://t.co/VAtZTunlqC</a></p>&mdash; Felipe Vial (he/él) (@pipevial) <a href="https://twitter.com/pipevial/status/1475598561438011395?ref_src=twsrc%5Etfw">December 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	 
+		
+	    -->
             </div>
-
+		
            <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
