--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
                 <strong>Economics journal articles</strong><br/>
                 <ul>
                 <li class="paper" words="Homelessness, panhandling, urban economics">
-                    Dordick, G., O'Flaherty, B., <strong>Brounstein, J.</strong>, Sinha, S., Yoo, J. What happens when you give money to panhandlers? The case of downtown Manhattan. Journal of Urban Economics. 2018. Volume 108. [<a href="https://www.sciencedirect.com/science/article/pii/S0094119018300755" target="_blank">Paper</a>]
+                    <strong> What happens when you give money to panhandlers? The case of downtown Manhattan. </strong> (with Dordick, G., O'Flaherty, B., Sinha, S., and Yoo, J. ). Journal of Urban Economics. 2018. Volume 108. [<a href="https://www.sciencedirect.com/science/article/pii/S0094119018300755" target="_blank">Paper</a>]
                 </li>
                 </ul>
 
@@ -67,11 +67,11 @@
               <strong>Working papers</strong><br/>
                 <ul>
                 <li class="paper" words="Agglomeration, arts economics, urban economics">
-                    <strong>Brounstein, J.</strong> Public investment in the arts and cultural agglomeration: Evidence from the New Deal. [<a href="/files/brounstein_returnarts_202110_wp.pdf" target="_blank">Paper</a>]
+                    <strong> Public investment in the arts and cultural agglomeration: Evidence from the New Deal </strong> [<a href="/files/brounstein_returnarts_202110_wp.pdf" target="_blank">Paper</a>]
                 </li>
 		<br>
 		<li class="paper" words="Estate taxation, tax avoidance, charitable giving">
-                    <strong>Brounstein, J.</strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data. [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
+                    <strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data </strong> [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
                 </li>
 		<br>
                 </ul>
@@ -81,11 +81,11 @@
               <strong>Works-in-progress</strong><br/>
                 <ul>
                 <li class="paper" words="Pink tax, Gender inequality, Gender wage gap">
-                    Barnes, K., <strong>Brounstein, J.</strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap
+                    <strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap </strong> (with Barnes, K.)
                 </li>
 		<br>		
                 <li class="paper" words="Tax havens, tax evasion, tax avoidance, tax elusion, multinational taxation, public economics">
-                    <strong>Brounstein, J.</strong> Estate tax avoidance through charitable giving
+                    <strong> Estate tax avoidance through charitable giving </strong> 
                 </li>
                 </ul>
               
@@ -94,7 +94,7 @@
               <strong>Non-economics journal articles</strong><br/>
                 <ul>
                 <li class="paper" words="Homelessness, Panhandling, Urban Economics, Homelessness Policy">
-                    Dordick, G., O'Flaherty, B., <strong>Brounstein, J.</strong>, Sinha, S. Policy for Panhandling: How to Encourage Good Panhandling and Discourage Bad. European Journal of Homelessness. 2018. [<a href="https://www.feantsaresearch.org/download/12-1_b1_thinkpiece_dordick_v028543394139574871091.pdf" target="_blank">Paper</a>]
+                    <strong> Policy for Panhandling: How to Encourage Good Panhandling and Discourage Bad. </strong> (with Dordick, G., O'Flaherty, B., and Sinha, S.) European Journal of Homelessness. 2018. [<a href="https://www.feantsaresearch.org/download/12-1_b1_thinkpiece_dordick_v028543394139574871091.pdf" target="_blank">Paper</a>]
                 </li>
                 </ul>
 
