--- a/research.html
+++ b/research.html
@@ -94,15 +94,13 @@
               <strong>Works-in-progress</strong><br/>
                 <ul>
                 <li class="paper" words="Pink tax, Gender inequality, Gender wage gap">
-                    <strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap </strong> (with [<a href="https://kayleighnb.github.io/" target="_blank">Barnes, K.</a>]) [Draft soon]
+                    <strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap </strong> (with <a href="https://kayleighnb.github.io/" target="_blank">Barnes, K.</a>) [Draft soon]
                 </li>
 		<br>
 		    <li class="paper" words="Homelessness, Housing, Public programs, Fiscality">
-                    <strong> A cost-benefit analysis of homelessness housing policies </strong> (with Wieselthier, J.) [Draft soon]
+                    <strong> The fiscality of homelessness housing policies </strong> (with Wieselthier, J.) [Draft soon]
                 </li>	
-		</br>
                 </ul>
-              
                  <br><br>
               
               <strong>Non-economics journal articles</strong><br/>
