--- a/misc.html
+++ b/misc.html
@@ -84,9 +84,9 @@
            <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
-                <dd><a href="/files/brounstein_cv_july2022.pdf">CV (updated July 2022)</a></dd>
+                <dd><a href="/files/brounstein_cv_july2022.pdf" target="_blank">CV (updated July 2022)</a></dd>
                 <br>
-                <dd><a href="https://twitter.com/jakobbrounstein">Twitter</a></dd>
+                <dd><a href="https://twitter.com/jakobbrounstein" target="_blank">Twitter</a></dd>
 		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
