--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4 style="font-size: 17.5px;"> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
-					My research mainly deals with tax avoidance/evasion and inequality. <br/> 
+					My research mainly deals with tax avoidance/evasion and inequality, but my interests also extend more broadly to applying applied microeconomoc methods to learing about social issues.  <br/> 
 					<br>
 					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. <br/>
 				</h4>		
