--- a/research.html
+++ b/research.html
@@ -16,13 +16,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 	
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EJ4L049V03"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QW6NPLQPRW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-EJ4L049V03');
+  gtag('config', 'G-QW6NPLQPRW');
 </script>
 	
 	<title>Jakob Brounstein</title>
