--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
                 
                 <!-- Main Image -->
-                <img align="middle"; style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto"; class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
-		   <figcaption style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto">Photo by Henry Teng</figcaption><br>
+                <img align="middle"; style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto"; class="img-responsive"; src="files/MTL_4378.JPG" alt="Abdulmuttolib Salako headshot">
+		   <figcaption style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto"></figcaption><br>
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
