--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
-                <dd><a href="/files/brounstein_cv_mostrecent.pdf" target="_blank" title="Brounstein CV">CV</a></dd>
+                <dd><a href="/files/brounstein_cv_mostrecent.pdf" target="_blank" title="Salako CV">CV</a></dd>
 		<br>
-		<dd><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F5axxHb67_B_R22lNuS1CKuvUkVicoFNbHfT-ylgkHKIoLBzkyXIEatslNpuiFJPnO8JerEtvdbAUAf2zQkYyWrFtQYNQ&user=hUFaF4Am-Z0C&gmla=AJsN-F5LU15P7CHw9awhRIfZrzQUVspERyO2vP2lcjiqTWthPxva_Azkp7cjB-mOFSUxiI5VHfgtp4ZTUB3_eh3AV8G4ZxtwqtTwRt3kAxHewMmpg3idLBY&sciund=12683526540785299500" target="_blank">Google Scholar</a></dd>
+		<dd><a href="https://scholar.google.com/citations?hl=en&user=TeEJFxQAAAAJ&view_op=list_works&gmla=AJsN-F6zDYxf3144Lx9wyARTtcuLxG0MB1Fr8JqB8VKb9tn1V8Z9twCyws3IyKWC7rVOAwHo_KGGp1BKe_NccB55aqTO600VHC25_TzaGGhORNIKVERatyzPSqdW0-FKduEBULMC-zqekvw-nVQkKHkF0rg8FKe7_XUAfdFrtRx015DaWwuMEpk&iaan=Abdulmuttolib+Babatunde+Salako" target="_blank">Google Scholar</a></dd>
 		<br>   
-		<dd><a href="https://twitter.com/jakobbrounstein" target="_blank">Twitter</a></dd>
+		<dd><a href="https://twitter.com/MuttolibSalako" target="_blank">Twitter</a></dd>
 		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
